# hh_vacancies_BD

./: README.md  pyproject.toml
src/: API_hh.py  config.py  database.ini
